# sfx-mcp

./: .coverage  .gitignore  LICENSE  MCP_SERVER_SPECIFICATION.md  README.md  pyproject.toml
.clinerules/: documentation_maintenance.md
src/sfx_mcp/: __init__.py  config.py  elevenlabs_proxy.py  main.py
src/sfx_mcp/elevenlabs_sfx/: __init__.py  client.py  exceptions.py
tests/: __init__.py
tests/elevenlabs_sfx/: __init__.py  test_client.py
